--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -22,7 +22,7 @@
     <body>
         <div class="navbar navbar-fixed-top">
             <div class="navbar-inner">
-                <div class="container-fluid">
+                <div class="container">
                     <!-- .btn-navbar is used as the toggle for collapsed navbar content -->
                     <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
                         <span class="icon-bar"></span>
@@ -61,7 +61,7 @@
         </ul>
         {% endif %}
 
-        <div class="container-fluid">
+        <div class="container">
             {% block content %}{% endblock %}
         </div>
         {% new_album %}
