--- a/templates/pins/templatetags/new_album.html
+++ b/templates/pins/templatetags/new_album.html
@@ -4,7 +4,7 @@
     <div class="modal-header">
         <h3>新建相册</h3>
     </div>
-    <form action="{% url pins:new-album %}" method="post" class="form-horizontal">
+    <form action="{% url album:new %}" method="post" class="form-horizontal">
         <div class="modal-body">
             {% csrf_token %}
             {% for field in form %}
