--- a/templates/pins/templatetags/new_album.html
+++ b/templates/pins/templatetags/new_album.html
@@ -2,7 +2,7 @@
 
 <div class="modal fade" id="new-album">
     <div class="modal-header">
-        <h3>新建相册</h3>
+        <h3>xxx新建相册</h3>
     </div>
     <form action="{% url album:new %}" method="post" class="form-horizontal">
         <div class="modal-body">
