adjust tmpl for pin home

--- a/templates/pins/pin_home.html
+++ b/templates/pins/pin_home.html
@@ -5,24 +5,27 @@
 <div class="row-fluid">
     <div class="span9">
 
-<div id="image">
-    <img src="{{ pin.file.url }}" alt="{{ pin.file.name }}" ">
-    <div class="btn-toolbar pull-left">
-        <div class="btn-group">
-            <a class="btn" href="{% url pin:rotate pin.id %}?angle=90">左旋</a>
-            <a class="btn" href="{% url pin:rotate pin.id %}?angle=270">右旋</a>
-            <a class="btn" href="{% url pin:delete pin.id %}">删除</a>
+        <div class="row-fluid">
+            <div class="btn-toolbar">
+                <div class="btn-group">
+                    <a class="btn" href="{% url pin:rotate pin.id %}?angle=90">左旋</a>
+                    <a class="btn" href="{% url pin:rotate pin.id %}?angle=270">右旋</a>
+                </div>
+                <div class="btn-group">
+                    <a class="btn btn-danger" data-toggle="modal" href="#modal-delete-pin" ><i class="icon-trash icon-white"></i>删除</a>
+                </div>
+                <div class="btn-group pull-right">
+                    <a class="btn btn-info" href="{% url pin:nav pin.pk %}?direct=prev"><i class="icon-chevron-left icon-white"></i>上一张</a>
+                    <a class="btn btn-info" href="{% url pin:nav pin.pk %}?direct=next">下一张<i class="icon-chevron-right icon-white"></i></a>
+                </div>
+            </div>
         </div>
-    </div>
-    <div class="btn-toolbar pull-right">
-        <div class="btn-group">
-            <button class="btn">Prev</button>
-            <button class="btn">Next</button>
+        <div class="row-fluid">
+            <img src="{{ pin.file.url }}" alt="{{ pin.file.name }}">
         </div>
-    </div>
-</div>
 
     </div>
+
     <div class="span3 well">
         <h3>{{pin.file.name}}</h3>
         <p><strong>{{pin.album.name}}</strong></p>
@@ -30,5 +33,20 @@
         <p><small>{{pin.album.create}}</small></p>
     </div>
 </div>
+
+<div class="modal hide" id="modal-delete-pin">
+    <div class="modal-header">
+        <a class="close" data-dismiss="modal">×</a>
+        <h3>删除照片</h3>
+    </div>
+    <div class="modal-body">
+        <p>照片删除后不能恢复,确认继续?</p>
+    </div>
+    <div class="modal-footer">
+        <a href="#" class="btn close" data-dismiss="modal">取消</a>
+        <a href="{% url pin:delete pin.id %}" class="btn btn-danger">确认删除</a>
+    </div>
+</div>
+
 {% endblock %}
 
