--- a/templates/pins/pin_home.html
+++ b/templates/pins/pin_home.html
@@ -8,11 +8,11 @@
         <div class="row-fluid">
             <img src="{{ pin.file.url }}" alt="{{ pin.file.name }}">
         </div>
-        <div>
+        <div class="row-fluid">
             {% csrf_token %}
             {% get_comment_form for pin as form %}
             <table class="table">
-                <form class="form form-horizontal" action="{% comment_form_target %}" method="post">
+                <form class="form form-horizontal well" action="{% comment_form_target %}" method="post">
                     {% csrf_token %}
                     <tbody>
                             <tr>
@@ -41,8 +41,16 @@
             </table>
 
             {% get_comment_count for pin as comment_count %}
-            <p>{{ comment_count }} 条评论:</p>
-            {% render_comment_list for pin %}
+            <h3>{{ comment_count }} 条评论:</h3>
+            {% get_comment_list for pin as comment_list %}
+            <ol>
+            {% for c in comment_list %}
+                <li class="">
+                <span>{{c.user}} 发表于 {{c.submit_date}}</span>
+                <pre>{{c.comment}}</pre>
+                </li>
+            {% endfor %}
+            </ol>
         </div>
     </div>
 
