--- a/static/core/css/pinry.css
+++ b/static/core/css/pinry.css
@@ -48,21 +48,21 @@ a:hover, a:focus, a:active { color: #0c4c9d; }
     z-index: 200;
 }
 
-    .messages li {
-        margin: 10px 0;
-        padding: 18px 28px;
-        border: 1px solid #ccc;
-        font-size: 16px
-    }
+.messages li {
+    margin: 10px 0;
+    padding: 18px 28px;
+    border: 1px solid #ccc;
+    font-size: 16px
+}
 
-    .messages li:hover {
-        -webkit-transform: scale(1.1);
-           -moz-transform: scale(1.1);
-            -ms-transform: scale(1.1);
-             -o-transform: scale(1.1);
-                transform: scale(1.1);
-        cursor: pointer;
-    }
+.messages li:hover {
+    -webkit-transform: scale(1.1);
+       -moz-transform: scale(1.1);
+        -ms-transform: scale(1.1);
+         -o-transform: scale(1.1);
+            transform: scale(1.1);
+    cursor: pointer;
+}
 
 #loader {
     margin-top: 70px;
@@ -88,30 +88,30 @@ a:hover, a:focus, a:active { color: #0c4c9d; }
     z-index: 100;
 }
 
-    .pin {
-        background: #fff;
-        width: 200px;
-        float: left;
-        border: 1px solid #ccc;
-        padding: 20px;
-        display: none;
-    }
+.pin {
+    background: #fff;
+    width: 200px;
+    float: left;
+    border: 1px solid #ccc;
+    padding: 20px;
+    display: none;
+}
 
-        .pin img {
-            width: 200px;
-            padding: 0;
-            margin: 0;
-        }
+.pin img {
+    width: 200px;
+    padding: 0;
+    margin: 0;
+}
 
-        .pin p {
-            margin-bottom: 0;
-            padding-top: 15px
-        }
+.pin p {
+    margin-bottom: 0;
+    padding-top: 15px
+}
 
-            .pin strong {
-                color: #777;
-                font-weight: normal;
-            }
+.pin strong {
+    color: #777;
+    font-weight: normal;
+}
 
 #form {
     border: 1px solid #ccc;
@@ -119,26 +119,25 @@ a:hover, a:focus, a:active { color: #0c4c9d; }
     padding: 15px;
 }
 
-    #form h1 {
-        font-family: 'Monoton';
-        text-align: center;
-        font-weight: normal;
-        margin-bottom: 15px;
-    }
-
-    form {
-        margin-bottom: 0;
-    }
-
-        textarea {
-            height: 70px;
-        }
-
-        .form-actions {
-            margin-bottom: 0;
-        }
-
-#id_comment {
-    width: auto;
+#form h1 {
+    font-family: 'Monoton';
+    text-align: center;
+    font-weight: normal;
+    margin-bottom: 15px;
 }
 
+form {
+    margin-bottom: 0;
+}
+
+textarea {
+    height: 70px;
+}
+
+.form-actions {
+    margin-bottom: 0;
+}
+
+.comment li {
+    width: 60%;
+}
